See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.37.0

              ppmtompeg: fix reading of GOPs, combine server.  Thanks
              Alun Jones.

              cmuwmtopbm, mgrtopbm, pbmtocmuwm, pbmtoicon, pbmtomgr:
              Rewrite to use packed PBM functions for efficiency.
              Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              Fix pamcomp: due to use of undefined value, sometimes produces
              plain format.

              Fix pamperspective: read all of input.

              Fix libnetpbm pm_system(): don't hang if shell command quits
              before taking all the input.

              Fix some compile failures with Irix IDO compiler.

              Build: Configure does test links to detect broken
              libpng-config --ldflags.

              Build: fix build with separate build directory.

              Build: fix merge build with no X11 library.

06.09.21 BJH  Release 10.36.0

              pbmtonokia: Add plain NPM output capability.  Thanks Paul Bolle
              <pebolle@tiscali.nl>.

              pbmtonokia: Pad to 8 bytes.  Thanks Paul Bolle
              <pebolle@tiscali.nl>.

              pbmtonokia: Limit text to 120 bytes.  Thanks Paul Bolle
              <pebolle@tiscali.nl>.

              pamthreshold: don't gather global information, and reread
              file, for local thresholding (to save time, resources).
              Thanks Erik Auerswald <auerswal@unix-ag.uni-kl.de>.

              libnetpbm: BK color matching adjustments, change of
              enum bk_color.  Thanks "Kenan Kalajdzic"
              <kalajdzic@gmail.com>.

              Fix version number control.

              pbmtonokia: fix headers of NGG and NOL to include 3 character
              magic.

              Release allocated memory before longjmping from libnetpbm.
